--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1098,6 +1098,8 @@
         "\n",
         "The split ran successfully because we created **three non-overlapping subsets** (train/val/test) with clear row counts and the same number of input features (30 columns). The sizes are sensible (about 70% / 15% / 15%), and the **fraud rate stays low and in the expected range** across all splits.\n",
         "\n",
+        "The implementation explicitly performs a **time-aware split** by sorting the dataframe with `df.sort_values(\"Time\")` before slicing into train/validation/test (earlier transactions -> train, later transactions -> test), which mirrors real deployment.\n",
+        "\n",
         "The computed `class_weight` is large for class 1, which confirms fraud is rare in the training set and will be up-weighted during training. Finally, scaling is fit on `X_train` only and then applied to validation/test, which helps prevent data leakage."
       ]
     },
@@ -2273,7 +2275,7 @@
         "|---|---|---|\n",
         "| Trivial baseline | Always predict class 0 | Absolute floor — any useful model must beat this |\n",
         "| Logistic regression | Linear classifier with balanced class weights | Shows how much signal lives in linear feature combinations |\n",
-        "| Starting MLP | 3-layer feedforward neural network (128 → 64 → 32) with Dropout | First non-linear deep-learning model; captures feature interactions |\n",
+        "| Starting MLP | 3-layer feedforward neural network (128 → 64 → 32) without Dropout | First non-linear deep-learning model; captures feature interactions |\n",
         "\n",
         "#### Interpreting the results\n",
         "\n",
@@ -2876,7 +2878,7 @@
         "\n",
         "Chollet's workflow requires confirming that the model has **enough capacity to overfit the training data** before adding regularisation. If a model *cannot* overfit, it lacks the representational power to learn the underlying patterns, and no amount of tuning will help.\n",
         "\n",
-        "The starting MLP from Step 5 was already built **without Dropout**. Here we go further and also build an **oversized model** (512 → 256 → 128, no Dropout, no early stopping) and train it for 60 epochs. The goal is to observe the **training loss dropping near zero** while the **validation loss diverges** — classic overfitting. This proves the MLP architecture family has sufficient capacity for this task. Regularisation (Dropout) will be introduced in the next section to tame this overfitting."
+        "The starting MLP from Step 5 was already built **without Dropout**. Here we go further and also build an **oversized model** (512 → 256 → 128, no Dropout, no early stopping) and train it for 60 epochs. The goal is to observe **divergence over epochs**: training loss keeps decreasing while validation loss stops improving and begins oscillating/rising. This curve-level behaviour is the key overfitting signal (more informative than only comparing final scalar losses). It proves the MLP architecture family has sufficient capacity for this task. Regularisation (Dropout) is introduced in the next section to tame this overfitting."
       ]
     },
     {
@@ -2982,9 +2984,12 @@
         "print(f\"Final val loss   : {final_val_loss:.4f}\")\n",
         "print(f\"Best val loss    : {best_val_loss:.4f} (epoch {best_val_epoch})\")\n",
         "print(f\"Gap (val - train): {final_val_loss - final_train_loss:.4f}\")\n",
-        "print(\"\\nThe large gap between train and val loss confirms the model CAN overfit.\")\n",
-        "print(\"This proves the architecture has sufficient capacity.\")\n",
-        "print(\"Regularisation (Dropout + early stopping) is what keeps it in check.\")"
+        "print(\"\\nInterpretation:\")\n",
+        "print(\"- Overfitting evidence comes from curve divergence over epochs:\")\n",
+        "print(\"  validation loss stops improving while training loss keeps dropping.\")\n",
+        "print(\"- Final scalar loss gap may be small or even slightly negative, but\")\n",
+        "print(\"  the trajectory still confirms sufficient capacity to overfit.\")\n",
+        "print(\"- This motivates introducing Dropout in the next section.\")"
       ]
     },
     {
@@ -3391,7 +3396,9 @@
         "\n",
         "Chollet's workflow recommends that, once all hyperparameters and the decision threshold have been locked in, the final model should be **retrained on the combined train + validation data** before the one-time test evaluation. This maximises the amount of data available for learning while preserving the held-out test set for an unbiased report.\n",
         "\n",
-        "The architecture, dropout rates, learning rate, and training configuration are identical to the best configuration from Step 7. We use the same number of epochs that early stopping selected during the best validation run (to avoid needing validation-based stopping on data that is now part of training).\n"
+        "The architecture, dropout rates, learning rate, and training configuration are identical to the best configuration from Step 7. We use the same number of epochs that early stopping selected during the best validation run (to avoid needing validation-based stopping on data that is now part of training).\n",
+        "\n",
+        "Because we now train on **train + validation combined**, the class distribution changes slightly, so the positive-class weight also changes (e.g., from ~518 to ~549). This is expected and reflects the new training population.\n"
       ]
     },
     {
@@ -3598,6 +3605,78 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### 8.2b — Multi-seed test robustness\n",
+        "\n",
+        "Because the test set contains only 52 fraud cases, single-run test metrics can be noisy. To assess stability, we retrain the final model on the combined train+validation set across multiple random seeds and evaluate each run on the same held-out test set.\n",
+        "\n",
+        "This does **not** replace the official one-time test report; it quantifies model-initialisation variance around that report."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ---------------------------------------------------------------------------\n",
+        "# 8.2b — Multi-seed test robustness evaluation\n",
+        "# ---------------------------------------------------------------------------\n",
+        "\n",
+        "seeds_test = [42, 123, 456, 789, 2024]\n",
+        "test_multi = []\n",
+        "\n",
+        "for s in seeds_test:\n",
+        "    random.seed(s); np.random.seed(s)\n",
+        "    tf.random.set_seed(s); os.environ[\"PYTHONHASHSEED\"] = str(s)\n",
+        "\n",
+        "    m_seed = build_mlp_flex(\n",
+        "        input_dim, best_cfg[\"widths\"], best_cfg[\"dropouts\"], name=f\"final_full_seed_{s}\"\n",
+        "    )\n",
+        "    m_seed.compile(\n",
+        "        optimizer=keras.optimizers.Adam(learning_rate=best_cfg[\"lr\"]),\n",
+        "        loss=\"binary_crossentropy\",\n",
+        "        metrics=[\"AUC\"],\n",
+        "    )\n",
+        "    m_seed.fit(\n",
+        "        X_full_scaled, y_full,\n",
+        "        epochs=n_epochs_final,\n",
+        "        batch_size=2048,\n",
+        "        class_weight=class_weight_full,\n",
+        "        verbose=0,\n",
+        "    )\n",
+        "\n",
+        "    y_prob_s = m_seed.predict(X_test_scaled, verbose=0).ravel()\n",
+        "    y_pred_s = (y_prob_s >= final_threshold).astype(int)\n",
+        "    p_s, r_s, _ = precision_recall_curve(y_test, y_prob_s)\n",
+        "\n",
+        "    test_multi.append({\n",
+        "        \"seed\": s,\n",
+        "        \"pr_auc\": auc(r_s, p_s),\n",
+        "        \"f1\": f1_score(y_test, y_pred_s),\n",
+        "        \"recall\": recall_score(y_test, y_pred_s),\n",
+        "        \"precision\": precision_score(y_test, y_pred_s),\n",
+        "    })\n",
+        "\n",
+        "# Print per-seed table\n",
+        "print(f\"{'Seed':>6} {'PR AUC':>10} {'F1':>10} {'Recall':>10} {'Precision':>12}\")\n",
+        "print(\"-\" * 56)\n",
+        "for row in test_multi:\n",
+        "    print(f\"{row['seed']:>6} {row['pr_auc']:>10.4f} {row['f1']:>10.4f} {row['recall']:>10.4f} {row['precision']:>12.4f}\")\n",
+        "\n",
+        "# Aggregate stats\n",
+        "arr = {k: np.array([r[k] for r in test_multi], dtype=float) for k in [\"pr_auc\", \"f1\", \"recall\", \"precision\"]}\n",
+        "print(\"\\nMean ± Std (and 95% CI of the mean):\")\n",
+        "for k, v in arr.items():\n",
+        "    mean = v.mean()\n",
+        "    std = v.std(ddof=1)\n",
+        "    ci95 = 1.96 * std / np.sqrt(len(v))\n",
+        "    print(f\"  {k:9s}: {mean:.4f} ± {std:.4f}  (95% CI: [{mean-ci95:.4f}, {mean+ci95:.4f}])\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### 8.3 — Validation vs test comparison\n",
         "\n",
         "A healthy model should show **similar performance on the validation and test sets**. A large gap would suggest that the threshold or hyperparameters were over-tuned to the validation set (a form of indirect data leakage). The table and analysis below examine this critically."
@@ -3655,6 +3734,15 @@
         "n_fraud_test = int(y_test.sum())\n",
         "print(f\"\\nFraud samples — Validation: {n_fraud_val}  |  Test: {n_fraud_test}\")\n",
         "print(f\"Total samples — Validation: {len(y_val)}  |  Test: {len(y_test)}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 8.3b — Test score distribution diagnostics\n",
+        "\n",
+        "The distribution plot below checks whether the validation-optimised threshold remains appropriate on test data. If many true fraud cases cluster just below the threshold, recall loss is expected."
       ]
     },
     {
@@ -4072,7 +4160,7 @@
         "| Optimizer             | Algorithm that updates model weights to minimize the loss, such as Adam                                                |\n",
         "| Loss function         | The quantity the model minimizes during training, such as binary cross entropy                                         |\n",
         "| Early stopping        | Stopping training when validation performance stops improving                                                          |\n",
-        "| Calibration           | How well predicted probabilities match observed event rates                                                            |\n",
+        "| Calibration           | Degree to which predicted probabilities align with observed frequencies (e.g., among transactions predicted at 0.8, about 80% should truly be fraud) |\n",
         "| Concept drift         | When the data generating process changes over time, causing performance degradation                                    |\n",
         "| Baseline model        | A simple reference model used for comparison, such as always predicting non fraud                                      |\n"
       ]
